build_output.log

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava FAILED
E:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:677: error: local variables referenced from a lambda expression must be final or effectively final
                                             return s.withClickEvent(new RunCommand("/bombo key remove " + i));
                                                                                                           ^
E:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\mixin\KeyboardMixin.java:35: error: incompatible types: long cannot be converted to Window
                     if (!InputConstants.isKeyDown(window, bind.keyCodes.get(i))) {
                                                   ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

[Incubating] Problems report is available at: file:///E:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  E:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:677: error: local variables referenced from a lambda expression must be final or effectively final
                                               return s.withClickEvent(new RunCommand("/bombo key remove " + i));
                                                                                                             ^
  E:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\mixin\KeyboardMixin.java:35: error: incompatible types: long cannot be converted to Window
                       if (!InputConstants.isKeyDown(window, bind.keyCodes.get(i))) {
                                                     ^
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  Note: Some input files use unchecked or unsafe operations.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
3 actionable tasks: 1 executed, 2 up-to-date
